--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: max-content;
     max-height:912px;
     padding-top:1rem;
     margin-top:-1.2rem;
@@ -204,7 +204,9 @@
     }
   }
   
-  
+  @media (max-width:1110px) and (min-width:920px){
+    
+  }
   /* mobile responsive */
   @media (max-width: 920px) {
     .reviews__container {
@@ -275,7 +277,7 @@
 }
 
   }
-  @media (max-width: 420px) {
+  @media (max-width: 460px) {
     .reviewBgMargin{
       margin-top: -3rem;
     }
