--- a/styles/header.css
+++ b/styles/header.css
@@ -64,12 +64,18 @@
   border-radius: 0%;
   padding-top:1.5rem;
   margin-top: -1rem;
-  margin-right:-3.25rem;
+  margin-right:-3.1rem;
 }
 .header__mobile_btn{
   display: none;
 }
-
+@media (max-width:1280px) and (min-width:1075px){
+  #header__btn_id_desktop{
+    left:0rem;
+    width:auto;
+    margin-right: -2.8rem;
+  }
+}
 
 @media (max-width:1074px) and (min-width:980px){
   #header__btn_id_desktop{
@@ -78,17 +84,27 @@
     margin-right: -2.5rem;
   }
 }
-@media (max-width:980px) and (min-width:921px){
+@media (max-width:980px) and (min-width:950px){
   #header__btn_id_desktop{
     left:0rem;
     width:auto;
-    margin-right: -2.5rem;
+    margin-right: -2.2rem;
     display:flex;
     flex-direction: column;
   }
 } 
+@media (max-width:950px) and (min-width:921px){
+  #header__btn_id_desktop{
+    left:0rem;
+    width:auto;
+    margin-right: -1.5rem;
+    display:flex;
+    flex-direction: column;
+    padding-right:0.7rem;
+  }
+}
 
-@media (max-width: 920px) {
+@media (max-width: 940px) {
   .header__mobile_btn{
     display: block;
   }
@@ -96,8 +112,8 @@
     top:-18px;
   }
     .header__container{
-        padding: 1rem 1rem 5rem 1rem;
-        height:auto;
+        padding: 1rem 0rem 5rem 0rem;
+        height:max-content;
     }
 
   .header__hamburger_menu {
@@ -144,4 +160,9 @@
 }
 .show {
   display: block !important;
+}
+@media (max-width:920px){
+  .header__container{
+    padding-bottom:10rem;
+  }
 }
